cext: Support compression

Fixes:
    Bug #110879: Compression doesn't work with C extension API
    https://bugs.mysql.com/bug.php?id=110879